# ExpenseFlow

./: .gitignore  README.md
backend/: alembic.ini  env.sample  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260630_0001_initial.py  20260705_0002_budgets.py  20260706_0003_telegram_link_codes.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/bot/: commands.py  handlers.py  keyboards.py  manager.py
backend/app/core/: config.py  database.py  exceptions.py  security.py
backend/app/models/: __init__.py  budget.py  category.py  friend.py  transaction.py  user.py
backend/app/parser/: category_map.py  regex_patterns.py  schemas.py  service.py
backend/app/repositories/: budget.py  category.py  friend.py  transaction.py  user.py
backend/app/routers/: __init__.py  analytics.py  auth.py  budgets.py  categories.py  friends.py  health.py  ocr.py  reports.py  summary.py  telegram.py  transactions.py
backend/app/schemas/: analytics.py  auth.py  bot.py  budget.py  category.py  friend.py  ocr.py  report.py  summary.py  transaction.py
backend/app/services/: analytics.py  auth.py  bot_message.py  bot_transaction.py  bot_user.py  budget.py  category.py  friend.py  ocr.py  report.py  summary.py  telegram_auth.py  telegram_link.py  (+1 more)
backend/expenseflow_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_analytics_reports.py  test_auth.py  test_friends_budgets.py  test_parser.py  test_telegram.py  test_telegram_auth.py  test_telegram_link_code.py  test_transactions.py
(+52 files in other folders)
